<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDetailsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstName"
        android:text="@string/first"
        android:textSize="21sp"
        android:textStyle="normal"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastName"
        android:text="@string/last"
        android:textSize="21sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/firstName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumber"
        android:text="@string/sample_mob_number"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/sendMessage"
        android:text="@string/send_message"
        android:textStyle="normal"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>