<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/contactCard"
    android:layout_margin="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text="@string/first"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/firstName"
            android:id="@+id/lastName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/msgOtp"
            android:text="@string/sample_otp_text"
            android:textSize="18sp"
            android:textStyle="normal"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/firstName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/msgTime"
            android:text="@string/sample_time"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>